--- a/dev/main/blocks/about/about.pug
+++ b/dev/main/blocks/about/about.pug
@@ -8,22 +8,22 @@
 		.about__controls
 			+button({
 				"text": "More info"
-			})(class = "btn_color_black")
+			})(class = "btn_color_black about__btn")
 
 			+button({
 				"text": "Join Experiance"
 			})(class = "btn_color_main")
 		.about__advantages.row
-			.advantage.advantage_black
+			.about__advantage.advantage.advantage_black
 				div.advantage__icon.advantage__icon_star
 					+icon('star-half', 'color_main')
 				div.advantage__title Responsive design
-			.advantage.advantage_light
+			.about__advantage.advantage.advantage_light
 				span.advantage__icon.advantage__icon_internet
 					+icon('internet', 'color_light')
 				div.advantage__title.advantage__title_marg Awesome features
 				p.advantage__text.text.text_size_m.text_color_light Lorem ipsum dolor sit amet, consectetur adipiscing elitelquam. Fusce quis nulla tincidunt interdum magna vitae.
-			.advantage.advantage_black
+			.about__advantage.advantage.advantage_black
 				span.advantage__icon.advantage__icon_loked
 					+icon('locked', 'color_main')
 				div.advantage__title Powerful security
