--- a/dev/main/blocks/features/__featuresList/_featuresList.sass
+++ b/dev/main/blocks/features/__featuresList/_featuresList.sass
@@ -1,14 +1,11 @@
 .feature
-	+col()
-	+size-lg(4)
-	//flex-basis: 297px
-	padding-left: 83px
+	padding-left: 5.44em
 	position: relative
 	&__icon
 		display: inline-block
-		width: 67px
-		height: 67px
-		padding: 22px
+		width: 4.187em
+		height: 4.187em
+		padding: 1.375em
 		box-sizing: border-box
 		border-radius: 100%
 		position: absolute
@@ -32,10 +29,4 @@
 			background-color: #4be3a4
 
 	&__title
-		+marginRem(0, 0, 32px, 0)
-	&__text
-		margin-top: -10px
-
-
-
-
+		margin-bottom: 1.2em
