--- a/dev/main/blocks/features/_features.sass
+++ b/dev/main/blocks/features/_features.sass
@@ -1,4 +1,10 @@
 .features
 	+paddingRem(126px, 0, 168px, 0)
 	&__title
-		+marginRem(0, 0, 137px, 0)
+		+marginEm(0, 0, 137px, 0)
+	&__item
+		+col
+		+size-xs(6)
+		+size-sm(6)
+		+size-md(4)
+		margin-bottom: 4.25em
