--- a/dev/main/blocks/gallery/gallery.pug
+++ b/dev/main/blocks/gallery/gallery.pug
@@ -11,27 +11,57 @@ mixin portfolioPrev(name)
 					+icon("link-symbol")
 
 .portfolio
+	.portfolio__prev
 		+portfolioPrev("Travel")
 		+portfolioPrev("Fashion")
 		+portfolioPrev("Fantasy")
 		+portfolioPrev("Animate")
-		+portfolioPrev("1")
-		+portfolioPrev("2")
-		+portfolioPrev("3")
-		+portfolioPrev("4")
-		
-+portfolioItem([
-	{
-		"title": "Fashion",
-		"slider": [
-		"Fashion1",
-		"Fashion2",
-		"Fashion3",
-		"Fashion4",
-		"Fashion5"
-		],
-		"text": "Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum."
-	}
-])
+		+portfolioPrev("Extreme")
+		+portfolioPrev("Support")
+		+portfolioPrev("Content")
+		+portfolioPrev("Outsourcing")
+	.portfolio__gallery.mfp-hide
+		+portfolioItem([
+			{
+				"title": "Travel",
+				"slider": ["1", "2", "3", "4", "5"],
+				"text": "Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum."
+			},
+			{
+				"title": "Fashion",
+				"slider": ["1", "2", "3", "4", "5"],
+				"text": "Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum."
+			},
+			{
+				"title": "Fantasy",
+				"slider": ["1", "2", "3", "4", "5"],
+				"text": "Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum."
+			},
+			{
+				"title": "Animate",
+				"slider": ["1", "2", "3", "4", "5"],
+				"text": "Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum."
+			},
+			{
+				"title": "Extreme",
+				"slider": ["1", "2", "3", "4", "5"],
+				"text": "Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum."
+			},
+			{
+				"title": "Support",
+				"slider": ["1", "2", "3", "4", "5"],
+				"text": "Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum."
+			},
+			{
+				"title": "Content",
+				"slider": ["1", "2", "3", "4", "5"],
+				"text": "Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum."
+			},
+			{
+				"title": "Outsourcing",
+				"slider": ["1", "2", "3", "4", "5"],
+				"text": "Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum."
+			}
+		])
 
 		//- .fashion#fashion.mfp-hide pepepepep
