--- a/dev/main/blocks/pricing/_pricing.sass
+++ b/dev/main/blocks/pricing/_pricing.sass
@@ -15,7 +15,13 @@
 		opacity: .55
 		mix-blend-mode: multiply
 	&__title
-		+marginRem(0, 0, 142px, 0)
+		+marginRem(0, 0, 182px, 0)
 		.title__behind
 			color: #444444
 			opacity: .3
+	&__plan
+		+col
+		+size(12)
+		+size-xs(6)
+		+size-sm(6)
+		+size-md(4)
