--- a/dev/main/blocks/service/_service.sass
+++ b/dev/main/blocks/service/_service.sass
@@ -3,7 +3,7 @@
 	position: relative
 	overflow: hidden
 	&__title
-		+marginRem(0, 0, 102px, 0)
+		+marginEm(0, 0, 102px, 0)
 		+col
 		+size-lg(6)
 		+shift-lg-left(6)
@@ -29,32 +29,23 @@
 		color: $mainColor
 		opacity: .7
 		z-index: 2
-
-	// &::after
-	// 	content: ""
-	// 	display: block
-	// 	width: 50%
-	// 	height: 100vh
-	// 	max-height: 721px
-	// 	background: url(../../static/img/general/team-884w.png) left bottom no-repeat
-	// 	background-size: cover
+	&__advantage
+		width: 50%
+		box-sizing: border-box
+		border-top: 1px solid gray
+		&:nth-child(odd)
+			border-right: 1px solid #757575
+		&:nth-child(-n+2)
+			border-top: none
 
 .serviceAdvantage
-	width: 50%
-	+paddingRem(51px, 0, 60px, 0)
+	+paddingEm(51px, 0, 60px, 0)
 	box-sizing: border-box
 	text-align: center
-	border-top: 1px solid gray
-	&:nth-child(odd)
-		border-right: 1px solid #757575
-	&:nth-child(-n+2)
-		border-top: none
 	&__icon
 		display: inline-block
 		width: 41px
 		height: 41px
-		margin-bottom: 40px
+		margin-bottom: 28px
 	&__title
-		margin-bottom: 38px
-	&__text
-		margin-top: -10px
+		margin-bottom: 1.6em
