--- a/dev/main/blocks/service/service.pug
+++ b/dev/main/blocks/service/service.pug
@@ -7,22 +7,22 @@
 				})(class = "service__title title_align_left")
 			.service__advantages
 				.row
-					.serviceAdvantage
+					.service__advantage.serviceAdvantage
 						span.serviceAdvantage__icon
 							+icon('gears')
 						.serviceAdvantage__title.subtitle Excellent Features
 						p.serviceAdvantage__text.text.text_size_m Lorem ipsum doloar sit amet meconstur adipiscing.
-					.serviceAdvantage
+					.service__advantage.serviceAdvantage
 						span.serviceAdvantage__icon
 							+icon('camera')
 						.serviceAdvantage__title.subtitle Simple & Clean
 						p.serviceAdvantage__text.text.text_size_m Lorem ipsum doloar sit amet meconstur adipiscing.
-					.serviceAdvantage
+					.service__advantage.serviceAdvantage
 						span.serviceAdvantage__icon
 							+icon('case')
 						.serviceAdvantage__title.subtitle Parallax Effect
 						p.serviceAdvantage__text.text.text_size_m Lorem ipsum doloar sit amet meconstur adipiscing.
-					.serviceAdvantage
+					.service__advantage.serviceAdvantage
 						span.serviceAdvantage__icon
 							+icon('bell')
 						.serviceAdvantage__title.subtitle 24/7 Support
