--- a/dev/main/blocks/team/__members/member.pug
+++ b/dev/main/blocks/team/__members/member.pug
@@ -1,6 +1,6 @@
 mixin member(data)
 	each i in data
-		.member
+		.member.team__member
 			.member__mainInfo
 				picture.member__img
 					source(srcset= i.img.srcset)
