--- a/dev/main/blocks/team/_team.sass
+++ b/dev/main/blocks/team/_team.sass
@@ -2,3 +2,8 @@
   +paddingRem(255px, 0, 356px, 0)
   &__title
     +marginRem(0, 0, 128px, 0)
+  &__member
+    +col()
+    +size-xs(12)
+    +size-sm(6)
+    +size-md(4)
