--- a/dev/main/modules/title/_title.sass
+++ b/dev/main/modules/title/_title.sass
@@ -7,7 +7,8 @@
 			text-align: left
 	&__main
 			width: 100%
-			+fontRem(30px)
+			+fontEm(30px)
+			letter-spacing: .5px
 			font-family: $fontTitle
 			color: $textColorBlack
 			font-weight: 900
@@ -18,6 +19,6 @@
 				transform: translateX(-50%)
 
 	&__behind
-			+fontRem(91px)
+			+fontEm(91px)
 			font-family: $fontSubtitle
 			color: #f0f0f0
