--- a/dev/main/blocks/gallery/_gallery.sass
+++ b/dev/main/blocks/gallery/_gallery.sass
@@ -1,11 +1,13 @@
 .portfolio
-  display: flex
-  flex-wrap: wrap
+  &__prev
+    display: flex
+    flex-wrap: wrap
 .portfolioPrev
-  width: 25%
+  flex: 1 320px
   height: 310px
   box-sizing: border-box
   position: relative
+  overflow: hidden
   &_travel
     background: url(../../static/img/content/portfolio/prev1-483w.jpg) bottom center no-repeat
     background-size: cover
@@ -18,16 +20,16 @@
   &_animate
     background: url(../../static/img/content/portfolio/prev4-483w.jpg) center no-repeat
     background-size: cover
-  &_1
+  &_extreme
     background: url(../../static/img/content/portfolio/prev5-483w.jpg) center no-repeat
     background-size: cover
-  &_2
+  &_support
     background: url(../../static/img/content/portfolio/prev6-483w.jpg) center no-repeat
     background-size: cover
-  &_3
+  &_content
     background: url(../../static/img/content/portfolio/prev7-483w.jpg) center no-repeat
     background-size: cover
-  &_4
+  &_outsourcing
     background: url(../../static/img/content/portfolio/prev8-483w.jpg) center no-repeat
     background-size: cover
   &__descr
@@ -35,13 +37,13 @@
     +paddingRem(26px, 31px, 26px, 31px)
     border: 1px solid $borderColor
     box-sizing: border-box
-    // background-color: $textColorLight
     background-color: rgba(255, 255, 255, .8)
     position: absolute
     bottom: 0
 
+
   &__name
-    +marginRem(0, 0, 0, 15px)
+    margin-left: 1.154em
     text-transform: uppercase
     position: relative
   &__controls
@@ -55,12 +57,14 @@
         border-top-right-radius: 15px
         border-top-left-radius: 15px
         background-color: inherit
+
   &__btn
     width: 34px
     height: 34px
     border-radius: 100%
     position: absolute
     bottom: -22px
+    cursor: pointer
     &_view
       right: 9px
       border: 1px solid $borderColor
@@ -69,7 +73,3 @@
       left: 9px
       border: 1px solid #000
       background-color: $textColorLight
-.fashion
-  width: 50%
-  height: 436px
-  background-color: red
