--- a/dev/main/blocks/pricing/__plans/_plan.sass
+++ b/dev/main/blocks/pricing/__plans/_plan.sass
@@ -1,10 +1,8 @@
 .plan
-	+col()
-	+size-lg(4)
 	position: relative
 	text-align: center
 	&__header
-		+paddingEm(30px, 0, 39px, 0)
+		+paddingEm(27px, 34px, 39px, 34px)
 		color: #fff
 		background-color: #444444
 		position: relative
@@ -47,28 +45,29 @@
 		background-color: #e6e6e6
 
 	&__title
-		+fontRem(15px)
+		+fontEm(15px)
 		font-family: $fontText
 		font-weight: 600
 		letter-spacing: 3px
-		+marginRem(0, 0, 45px, 0)
+		margin-bottom: 2.87em
 		text-transform: uppercase
 	&__priceBlock
-		+marginEm(0, 0, 34px, 0)
+		+marginEm(0, 0, 29px, 0)
 	&__price
-		+fontRem(60px)
+		+fontEm(60px)
 		line-height: .7
 		font-family: $fontTitle
 		position: relative
 		&::before
 			content: "$"
-			+fontRem(40px)
+			font-size: 0.56em
 			font-family: $fontText
 			position: absolute
-			left: -28px
+			//left: -28px
+			left: -0.82em
 	&__billingPer
-		+fontRem(13px)
-		margin-left: 14px
+		+fontEm(13px)
+		margin-left: 1.08em
 		font-family: $fontText
 		text-transform: uppercase
 		position: relative
@@ -77,14 +76,15 @@
 			line-height: 1.24
 			position: absolute
 			top: 0
-			left: -10px
+			left: -0.77em
 	&__descr
 		color: inherit
 	&__details
+		padding-top: 3.7rem
 		margin-bottom: 4px
 		background-color: #fff
 	&__item
-		+paddingEm(25px, 0, 25px, 0)
+		+paddingEm(22px, 0, 22px, 0)
 		color: #808080
 	&__item:not(:last-child)
 		border-bottom: 1px solid #f0f0f0
@@ -94,7 +94,7 @@
 			content: ">"
 			position: absolute
 			top: 0
-			left: -14px
+			left: -1.08em
 			line-height: 1.24
 	&__btn
 		display: block
