--- a/dev/main/blocks/team/__members/_member.sass
+++ b/dev/main/blocks/team/__members/_member.sass
@@ -1,23 +1,20 @@
 .member
-	+col()
-	+size-lg(4)
 	position: relative
-	&__name
-		+fontRem(16px)
 	&__info
-		+paddingRem(0, 24px, 0, 24px)
+		+paddingEm(0, 24px, 0, 24px)
 		background-color: #ebebeb
 		&:hover .member__details
 			display: block
 	&__infoItem
 		display: block
-		+paddingRem(24px, 0, 24px, 0)
+		+paddingRem(22px, 0, 22px, 0)
 		text-align: center
 	&__infoItem:not(:last-child)
 		border-bottom: 1px dashed $borderColor
 	&__position
-		+fontRem(11px)
+		+fontEm(11px)
 	&__img
+		display: block
 		margin-bottom: 8px
 	img
 		width: 100%
@@ -26,28 +23,34 @@
 	&__details
 		position: absolute
 		top: 0
+		bottom: 0
 		left: 0
-		+paddingRem(96px, 24px, 0, 24px)
+		+paddingEm(96px, 24px, 0, 24px)
 		text-align: center
 		background-color: $mainColor
 		color: #000
 		display: none
 	&__detailsName
-		+marginRem(0, 0, 23px, 0)
+		margin-bottom: 0.71em
 		font-family: $fontTitle
-		+fontRem(24px)
+		+fontEm(24px)
 		font-weight: bold
 		text-transform: uppercase
 	&__detailsPos
 		@extend .member__detailsName
-		+fontRem(16px)
+		+fontEm(16px)
 	&__detailsText
-		+marginRem(76px, 0, 124px, 0)
-		+paddingRem(0, 16px, 0, 16px)
+		margin: 4.71em 0
+		//+marginRem(66px, 0, 117px, 0)
+		padding: 0 0.875em
 		font-family: $fontText
-		line-height: 1.71
-		+fontRem(14px)
+		line-height: 1.75
+		+fontEm(14px)
 	&__detailsSocial
+		position: absolute
+		left: 0
+		right: 0
+		bottom: 0
 		+paddingRem(40px, 34px, 50px, 34px)
 		border-top: 1px dashed $borderColor
 	&__socialLink
