--- a/dev/main/index.pug
+++ b/dev/main/index.pug
@@ -20,12 +20,13 @@ block content
 				div
 				div
 	include blocks/mainScreen/mainScreen
+	include modules/menu/menu
 	include modules/header/header
 	include blocks/about/about
 	include blocks/purchaseBlock/purchaseBlock
 	include blocks/features/__featuresList/featuresList
 	include blocks/features/features
-	include blocks/gallery/__portfolioItem/portfolioItem
+	include blocks/gallery/__portfolioItem/__portfolioItem
 	include blocks/gallery/gallery
 	include blocks/service/service
 	include blocks/pricing/__plans/plan
