--- a/dev/main/modules/button/_button.sass
+++ b/dev/main/modules/button/_button.sass
@@ -1,7 +1,8 @@
 .btn
-	min-width: 226px
-	min-height: 64px
+	min-width: 227px
+	min-height: 60px
 	+fontRem(18px)
+	font-family: $fontTitle
 	text-align: center
 	vertical-align: middle
 	&_color
@@ -18,9 +19,9 @@
 		text-transform: uppercase
 	&_size
 		&_s
-			min-width: 184px
-			min-height: 60px
+			min-width: 180px
+			min-height: 56px
 		&_xs
 			min-width: 127px
-			min-height: 44px
-
+			min-height: 40px
+			+fontRem(12px)
