--- a/dev/main/modules/menu/_menu.sass
+++ b/dev/main/modules/menu/_menu.sass
@@ -1,12 +1,12 @@
 .nav
   display: flex
-  flex-flow: row wrap
-  justify-content: space-between
+  text-align: center
   &__link
-    +fontRem(14px)
+    +fontEm(14px)
     font-family: $fontLight
     text-transform: uppercase
     color: $textColorLight
-    transition: .5s ease-in-out
-    &:hover
-      color: $mainColor
+    +sm-block
+      transition: .5s ease-in-out
+      &:hover
+        color: $mainColor
