--- a/dev/main/sass/_common_styles.sass
+++ b/dev/main/sass/_common_styles.sass
@@ -11,13 +11,13 @@
 		vertical-align: middle
 .text
 	font-family: $fontText
-	+fontRem(13px)
+	+fontEm(13px)
 	//line-height: 1.85 !!!!!!!!!!
 	letter-spacing: 0.5px
 	color: $textColor
 	&_size
 		&_m
-			+fontRem(16px)
+			+fontEm(16px)
 			line-height: 1.63
 			//text-align: center
 	&_color
@@ -25,12 +25,12 @@
 			color: #fff
 .subtitle
 	font-family: $fontTitle
-	+fontRem(18px)
+	+fontEm(18px)
 	font-weight: bold
 	text-transform: uppercase
 	color: $textColorBlack
 	&_size_smaller
-		+fontRem(16px)
+		+fontEm(16px)
 
 .icon
 	width: 100%
